tests/e2e/keyword_and_service_argument.error
Error: syntax error in story at line 1, column 20

1|    http fetch url: "" and: "" // Idea is to demonstrate argument `and` is parsed successfully.
                         ^^^^^^^

E0141: http action `fetch` does not accept argument `and`.
