tests/e2e/keyword_and_service_argument.story
http fetch url: "" and: "" // Idea is to demonstrate argument `and` is parsed successfully.
